[fix] Fixes Bug- Correct Long Question Render on Mobile

--- a/public/style.css
+++ b/public/style.css
@@ -18,13 +18,13 @@
 @font-face {
 	font-family: 'Swiss-911-Extra-Compressed';
 	src:
-		url('./assets/fonts/Swiss_911_Extra_Compressed.woff2') format('woff2'),	
+		url('./assets/fonts/Swiss_911_Extra_Compressed.woff2') format('woff2'),
 		url('./assets/fonts/Swiss_911_Extra_Compressed.woff') format('woff');
 }
 
 @font-face {
 	font-family: 'Gyparody';
-	src: 
+	src:
 		url('./assets/fonts/gyparody.woff2') format('woff2'),
 		url('./assets/fonts/gyparody.woff') format('woff');
 
@@ -32,7 +32,7 @@
 
 html, body {
   position: relative;
-  background-image: url('./assets/gameboard_background.gif');	
+  background-image: url('./assets/gameboard_background.gif');
 	min-height: 100vh;
   min-width: 100vw;
   background-size: 100% 100%;
@@ -264,7 +264,7 @@ u:hover {
 	font-family: 'Gyparody';
 	font-size: 3vw;
 	text-align: center;
-	animation-duration: 
+	animation-duration:
 }
 
 .howto-transition-appear {
@@ -536,11 +536,12 @@ a[disabled] {
   background: #fee533;
   position: relative;
   margin: 30px;
-  padding: 16px;
-  font-size: 25px;
+  padding: 13px;
+  font-size: 22px;
   border-radius: 10px;
   box-shadow: 0px 10px 0px 0px #fef299, 0px 0px 20px 0px #bbb;
   transition: all 0.2s;
+  white-space: normal;
 }
 
 .a:active {
@@ -572,7 +573,7 @@ a[disabled] {
 .developers {
 	text-align: center;
 	padding-bottom: 10px;
-} 
+}
 
 #express {
 	margin-top: 18px;
@@ -604,4 +605,8 @@ ul.why {
 
 img {
 	image-rendering: crisp-edges;
+}
+.host-gameplay-question {
+	margin-bottom: 60px;
+	text-align: center;
 }
